feat: add user activation feature and add more password validation
