# src/controllers/auth.controller.ts
@@ -22,7 +22,19 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test("at-least-one-uppercase", "Password must contain at least one uppercase letter", (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*[A-Z])/;
+      return regex.test(value);
+    })
+    .test("at-least-one-number", "Password must contain at least one number", (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password")], "Passwords not match"),
@@ -31,6 +43,10 @@ const registerValidateSchema = Yup.object({
 const register = async (req: Request, res: Response) => {
   /**
    #swagger.tags = ['Auth']
+   #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/RegisterRequest"}
+    }
    */
   const { fullName, username, email, password, confirmPassword } = req.body as unknown as Tregister;
 
@@ -70,6 +86,7 @@ const login = async (req: Request, res: Response) => {
   try {
     const userByIdentifier = await UserModel.findOne({
       $or: [{ username: identifier }, { email: identifier }],
+      isActive: true,
     });
 
     if (!userByIdentifier) {
@@ -126,4 +143,44 @@ const me = async (req: IreqUser, res: Response) => {
   }
 };
 
-export { register, login, me };
+const activation = async (req: Request, res: Response) => {
+  /**
+    #swagger.tags = ['Auth']
+    #swagger.requestBody = {
+      required: true,
+      content: {
+        "application/json": {
+          schema: { $ref: "#/components/schemas/ActivationRequest" }
+        }
+      }
+    }
+   */
+  try {
+    const { code } = req.body as { code: string };
+
+    const user = await UserModel.findOneAndUpdate(
+      {
+        activationCode: code,
+      },
+      {
+        isActive: true,
+      },
+      {
+        new: true,
+      }
+    );
+
+    res.status(200).json({
+      message: "User successfully activated",
+      data: user,
+    });
+  } catch (error) {
+    const err = error as unknown as Error;
+    res.status(400).json({
+      message: err.message,
+      data: null,
+    });
+  }
+};
+
+export { register, login, me, activation };
