# src/routes/api.ts
@@ -1,5 +1,5 @@
 import express from "express";
-import { register, login, me } from "../controllers/auth.controller";
+import { register, login, me, activation } from "../controllers/auth.controller";
 import authMiddleware from "../middlewares/auth.middleware";
 
 const router = express.Router();
@@ -7,5 +7,6 @@ const router = express.Router();
 router.post("/auth/register", register);
 router.post("/auth/login", login);
 router.get("/auth/me", authMiddleware, me);
+router.post("/auth/activate", activation);
 
 export default router;
